[gd_scene load_steps=8 format=3 uid="uid://btabse2doe62t"]

[ext_resource type="Script" uid="uid://bpbwy8ob75cyf" path="res://scripts/audio_controller.gd" id="1_wx6ud"]
[ext_resource type="AudioStream" uid="uid://vlxbls6p7cft" path="res://assets/SFX/main_menu.mp3" id="2_i15yp"]
[ext_resource type="AudioStream" uid="uid://bkhv5tjtnlq6o" path="res://assets/SFX/game.mp3" id="3_6lvn4"]
[ext_resource type="AudioStream" uid="uid://0qku78vy1jvc" path="res://assets/SFX/player_hit.mp3" id="4_m8ygj"]
[ext_resource type="AudioStream" uid="uid://deycq14thw6kq" path="res://assets/SFX/enemy_hit.mp3" id="5_6lvn4"]
[ext_resource type="AudioStream" uid="uid://3sc72mulels6" path="res://assets/SFX/shoot.mp3" id="6_ku11k"]
[ext_resource type="AudioStream" uid="uid://bi5wuhk4fhesk" path="res://assets/SFX/explosion.mp3" id="7_34kxu"]

[node name="AudioController" type="Node2D"]
process_mode = 3
script = ExtResource("1_wx6ud")

[node name="MainBGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i15yp")

[node name="GameBGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6lvn4")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_m8ygj")
volume_db = -3.0
pitch_scale = 2.0

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6lvn4")
volume_db = -10.0

[node name="PlayerShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ku11k")
volume_db = -5.0

[node name="PlayerExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_34kxu")
volume_db = -10.0
